# get-training-done

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/agents/: ml-optimizer.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: ml-optimizer.md
commands/gtd/: context.md  eda.md  evaluate.md  evolve.md  inference.md  models.md  train.md
docs/: learning-lifecycle.md
examples/: binary_classification.md  quick_start.md  regression.md
scripts/: install-deep.sh  run-server.sh
src/bbopt/: __init__.py  cli.py
src/bbopt/core/: __init__.py  data_profiler.py  evaluator.py  model_registry.py  trainer.py  workspace.py
src/bbopt/research/: __init__.py  kaggle_client.py  pwc_client.py
src/bbopt/servers/: __init__.py  data_server.py  research_server.py  training_server.py
src/gtd/: __init__.py
src/gtd/core/: data_profiler.py  data_splitter.py  deep_analyzer.py  ensemble.py  evaluator.py  exporter.py  feature_engine.py  meta_learner.py  model_registry.py  prompt_evolver.py  registry.py  run_analyzer.py  trainer.py  workspace.py
src/gtd/research/: arxiv_client.py  insight_extractor.py  kaggle_client.py
src/gtd/servers/: data_server.py  research_server.py  training_server.py
tests/: conftest.py  test_data_profiler.py  test_data_splitter.py  test_deep_analyzer.py  test_eda_tools.py  test_ensemble.py  test_evaluator.py  test_feature_engine.py  test_insight_extractor.py  test_meta_learner.py  test_model_registry.py  test_prompt_evolver.py  test_registry.py  test_run_analyzer.py  test_trainer.py
tests/fixtures/: boston.csv  titanic.csv
tests/test_servers/: test_data_server.py  test_research_server.py  test_training_server.py
