[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-driven-bbopt"
version = "0.1.0"
description = "Agent-driven black-box optimization plugin for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Yuval Shalev"},
]
keywords = ["automl", "optimization", "claude", "mcp", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "shap>=0.44",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "numpy>=1.26",
    "joblib>=1.3",
    "requests>=2.31",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
bbopt = "bbopt.cli:main"

[project.urls]
Homepage = "https://github.com/yuvalshalev/agent-driven-bb-optimization"
Repository = "https://github.com/yuvalshalev/agent-driven-bb-optimization"
Issues = "https://github.com/yuvalshalev/agent-driven-bb-optimization/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
