[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-training-done"
version = "0.3.0"
description = "AI-powered ML optimization for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Yuval Shalev"},
]
keywords = ["automl", "optimization", "claude", "mcp", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "numpy>=1.26",
    "joblib>=1.3",
    "requests>=2.31",
    "scipy>=1.11",
]

[project.optional-dependencies]
tabpfn = ["tabpfn>=2.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/yuvalshalev/get-training-done"
Repository = "https://github.com/yuvalshalev/get-training-done"
Issues = "https://github.com/yuvalshalev/get-training-done/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N803", "N806"]  # Allow uppercase param/variable names (X, y) — ML convention
